--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       content="Maliba Pharmacy College, UTU University"
     />
     <meta name="Keywords" content="Maliba Pharmacy College, UTU University" />
-    <link rel="Shortcut Icon" href="./assets/images/maliba.ico" /
+    <link rel="Shortcut Icon" href="./images/Logo/maliba.ico" />
 
   
   </head>
