--- a/staff.html
+++ b/staff.html
@@ -36,10 +36,11 @@
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <strong><a class="nav-link active" href="#">Home</a></strong>
+            <a class="nav-link" href="./index.html">Home</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">About Us</a>
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">About
+              Us</a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="#">Mission, Vision & Objective</a></li>
               <li><a class="dropdown-item" href="#">Message</a></li>
@@ -58,7 +59,8 @@
             </ul>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Student Corner</a>
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Student
+              Corner</a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="#">Campus Life</a></li>
               <li><a class="dropdown-item" href="#">Student Achievements</a></li>
@@ -66,7 +68,7 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./staff.html">Staff</a>
+            <strong> <a class="nav-link active" href="./staff.html">Staff</a></strong>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Placement</a>
@@ -76,36 +78,7 @@
     </div>
   </nav>
   <div class="container-fluid">
-    <!-- Carousel -->
-    <div id="demo" class="carousel slide" data-bs-ride="carousel">
-      <!-- Indicators/dots -->
-      <div class="carousel-indicators">
-        <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
-        <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
-        <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
-      </div>
 
-      <!-- The slideshow/carousel -->
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="./images/SlideShowImage/1.jpg" alt="" class="d-block" style="width:100%">
-        </div>
-        <div class="carousel-item">
-          <img src="./images/SlideShowImage/2.jpg" alt="" class="d-block" style="width:100%">
-        </div>
-        <div class="carousel-item">
-          <img src="./images/SlideShowImage/3.jpg" alt="" class="d-block" style="width:100%">
-        </div>
-      </div>
-
-      <!-- Left and right controls/icons -->
-      <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon"></span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
-        <span class="carousel-control-next-icon"></span>
-      </button>
-    </div>
   </div>
 </body>
 
