Slider Size Set

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       </div>
     </div>
   </nav>
-  <div class="container-fluid">
+  <div class="container-fluid mt-4 pt-5" style="margin-left: 0;margin-right: 0;padding-left: 0;padding-right: 0;">
     <!-- Carousel -->
     <div id="demo" class="carousel slide" data-bs-ride="carousel">
       <!-- Indicators/dots -->
