--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
       <!-- The slideshow/carousel -->
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="./images/SlideShowImage/1.jpg" alt="" class="d-block" style="width:100%">
+          <img src="./images/SlideShowImage/1.jpg" alt="" class="d-block carousel-item-img">
         </div>
         <div class="carousel-item">
-          <img src="./images/SlideShowImage/2.jpg" alt="" class="d-block" style="width:100%">
+          <img src="./images/SlideShowImage/2.jpg" alt="" class="d-block carousel-item-img">
         </div>
         <div class="carousel-item">
-          <img src="./images/SlideShowImage/3.jpg" alt="" class="d-block" style="width:100%">
+          <img src="./images/SlideShowImage/3.jpg" alt="" class="d-block carousel-item-img">
         </div>
       </div>
 
