--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       </div>
     </div>
   </nav>
-  <div class="container-fluid mt-4 pt-5" style="margin-left: 0;margin-right: 0;padding-left: 0;padding-right: 0;">
+  <div class="container-fluid mt-4 mb-4 pt-5" style="margin-left: 0;margin-right: 0;padding-left: 0;padding-right: 0;">
     <!-- Carousel -->
     <div id="demo" class="carousel slide" data-bs-ride="carousel">
       <!-- Indicators/dots -->
@@ -106,7 +106,55 @@
         <span class="carousel-control-next-icon"></span>
       </button>
     </div>
+    <!-- Programmes -->
+    <div class="container-fluid mt-2">
+      <h5>Programmes</h5>
+      <div class="row">
+        <div class="col-md-6 p-1">
+          <div class="card" style="background-color: #5d4f96;color: #ffffff;">
+            <div class="card-body">
+              <h5 class="card-title">Bachelor of Pharmacy (B.Pharm)</h5>
+              <!-- <p class="card-text">Some text inside the first box.</p> -->
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 p-1">
+          <div class="card" style="background-color: #ee74aa;color: #ffffff;">
+            <div class="card-body">
+              <h5 class="card-title">Master of Pharmacy (M.Pharm)</h5>
+              <!-- <ol type="1" class="card-text">
+                <li>Pharmaceutical Quality Assurance</li>
+                <li>Pharmaceutics</li>
+                <li>Pharmacology</li>
+                <li>Pharmaceutical Chemistry</li>
+              </ol> -->
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row mt-2">
+        <div class="col-md-6 p-1">
+          <div class="card" style="background-color: #ee74aa;color: #ffffff;">
+            <div class="card-body">
+              <h5 class="card-title">Doctor of Pharmacy (Pharm D)
+              </h5>
+              <!-- <p class="card-text">Some text inside the third box.</p> -->
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 p-1">
+          <div class="card" style="background-color: #5d4f96;color: #ffffff;">
+            <div class="card-body">
+              <h5 class="card-title">Doctor of Pharmacy (Pharm D) - Post
+                Baccalaureate</h5>
+              <!-- <p class="card-text">Some text inside the fourth box.</p> -->
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
+
 </body>
 
 </html>
