--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body style="font-family: Verdana, Geneva, Tahoma, sans-serif;">
   <nav class="navbar navbar-expand-sm bg-light navbar-light fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
@@ -113,7 +113,7 @@
         <div class="col-md-6 p-1">
           <div class="card" style="background-color: #5d4f96;color: #ffffff;">
             <div class="card-body">
-              <h5 class="card-title">Bachelor of Pharmacy (B.Pharm)</h5>
+              <h6 class="card-title">Bachelor of Pharmacy (B.Pharm)</h6>
               <!-- <p class="card-text">Some text inside the first box.</p> -->
             </div>
           </div>
@@ -121,7 +121,7 @@
         <div class="col-md-6 p-1">
           <div class="card" style="background-color: #ee74aa;color: #ffffff;">
             <div class="card-body">
-              <h5 class="card-title">Master of Pharmacy (M.Pharm)</h5>
+              <h6 class="card-title">Master of Pharmacy (M.Pharm)</h6>
               <!-- <ol type="1" class="card-text">
                 <li>Pharmaceutical Quality Assurance</li>
                 <li>Pharmaceutics</li>
@@ -136,8 +136,8 @@
         <div class="col-md-6 p-1">
           <div class="card" style="background-color: #ee74aa;color: #ffffff;">
             <div class="card-body">
-              <h5 class="card-title">Doctor of Pharmacy (Pharm D)
-              </h5>
+              <h6 class="card-title">Doctor of Pharmacy (Pharm D)
+              </h6>
               <!-- <p class="card-text">Some text inside the third box.</p> -->
             </div>
           </div>
@@ -145,16 +145,60 @@
         <div class="col-md-6 p-1">
           <div class="card" style="background-color: #5d4f96;color: #ffffff;">
             <div class="card-body">
-              <h5 class="card-title">Doctor of Pharmacy (Pharm D) - Post
-                Baccalaureate</h5>
+              <h6 class="card-title">Doctor of Pharmacy (Pharm D) - Post
+                Baccalaureate</h6>
               <!-- <p class="card-text">Some text inside the fourth box.</p> -->
             </div>
           </div>
         </div>
       </div>
     </div>
+    <!-- News and Announcement -->
+    <div class="container-fluid mt-2" style="font-size: smaller;">
+      <div class="row">
+        <div class="col-md-6">
+          <h5>News</h5>
+          <div class="d-flex">
+            <img src="./images/Logo/MPC_logo.jpg" alt="Left side image" height="112" width="150" />
+            <div style="margin-left: 10px;">
+              <h6>IIT Bombay Celebrates 74th Republic Day</h6>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod velit vel leo malesuada, a rutrum
+                ante posuere. Fusce viverra justo a libero scelerisque congue. In et quam vel velit tincidunt porta vel
+                vel sapien. Sed auctor vestibulum leo, et dapibus magna sollicitudin id. </p>
+            </div>
+          </div>
+          <div class="d-flex">
+            <img src="./images/Logo/MPC_logo.jpg" alt="Left side image" height="112" width="150" />
+            <div style="margin-left: 10px;">
+              <h6>IIT Bombay Celebrates 74th Republic Day</h6>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod velit vel leo malesuada, a rutrum
+                ante posuere. Fusce viverra justo a libero scelerisque congue. In et quam vel velit tincidunt porta vel
+                vel sapien. Sed auctor vestibulum leo, et dapibus magna sollicitudin id. </p>
+            </div>
+          </div>
+          <div class="d-flex">
+            <img src="./images/Logo/MPC_logo.jpg" alt="Left side image" height="112" width="150" />
+            <div style="margin-left: 10px;">
+              <h6>IIT Bombay Celebrates 74th Republic Day</h6>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod velit vel leo malesuada, a rutrum
+                ante posuere. Fusce viverra justo a libero scelerisque congue. In et quam vel velit tincidunt porta vel
+                vel sapien. Sed auctor vestibulum leo, et dapibus magna sollicitudin id. </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <h5>Announcement</h5>
+          <ul class="list-group">
+            <li class="list-group-item">Maliba Pharmacy College secured 37th position in MHRD's NIRF ranking in 2016 and
+              consistently ranked in
+              the band of 75-100 from 2017, with 94th rank in 2022.</li>
+            <li class="list-group-item">Maliba Pharmacy College ranked 3rd in GSIRF ranking in 2020 and 2021.</li>
+            <li class="list-group-item">UthFest</li>
+          </ul>
+        </div>
+      </div>
+    </div>
   </div>
-
 </body>
 
 </html>
