Our Student Speak

--- a/index.html
+++ b/index.html
@@ -198,6 +198,54 @@
         </div>
       </div>
     </div>
+    <!-- Our Student Speak -->
+    <div class="container-fluid">
+      <h5 class="text-center mb-4">Our Student Speak</h5>
+      <div class="row">
+        <div class="col-md-4 mb-5">
+          <div class="card text-center">
+            <img src="./images/Logo/MPC_logo.jpg" class="rounded-circle mx-auto mt-3" alt="profile image" height="100"
+              width="100">
+            <div class="card-body">
+              <h6 class="card-title">John Doe</h6>
+              <p class="card-text">One of my greatest concern was towards my career prospects, and the job I would
+                pursue after my studies. However, all my concerns were resolved when I received the necessary
+                professional training and grooming from the PU Training and placement cell. Parul University's focus on
+                placements is indeed unique. I truly appreciate the opportunities which they facilitated, thus leading
+                me to my dream job.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 mb-5">
+          <div class="card text-center">
+            <img src="./images/Logo/MPC_logo.jpg" class="rounded-circle mx-auto mt-3" alt="profile image" height="100"
+              width="100">
+            <div class="card-body">
+              <h6 class="card-title">Jane Doe</h6>
+              <p class="card-text">One of my greatest concern was towards my career prospects, and the job I would
+                pursue after my studies. However, all my concerns were resolved when I received the necessary
+                professional training and grooming from the PU Training and placement cell. Parul University's focus on
+                placements is indeed unique. I truly appreciate the opportunities which they facilitated, thus leading
+                me to my dream job.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 mb-5">
+          <div class="card text-center">
+            <img src="./images/Logo/MPC_logo.jpg" class="rounded-circle mx-auto mt-3" alt="profile image" height="100"
+              width="100">
+            <div class="card-body">
+              <h6 class="card-title">Jim Smith</h6>
+              <p class="card-text">One of my greatest concern was towards my career prospects, and the job I would
+                pursue after my studies. However, all my concerns were resolved when I received the necessary
+                professional training and grooming from the PU Training and placement cell. Parul University's focus on
+                placements is indeed unique. I truly appreciate the opportunities which they facilitated, thus leading
+                me to my dream job.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </body>
 
