--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <div class="container-fluid mt-2">
       <h5>Programmes</h5>
       <div class="row">
-        <div class="col-md-6 p-1">
+        <div class="col-md-3 p-1">
           <div class="card" style="background-color: #5d4f96;color: #ffffff;">
             <div class="card-body">
               <h6 class="card-title">Bachelor of Pharmacy (B.Pharm)</h6>
@@ -118,36 +118,61 @@
             </div>
           </div>
         </div>
-        <div class="col-md-6 p-1">
+        <div class="col-md-3 p-1">
           <div class="card" style="background-color: #ee74aa;color: #ffffff;">
             <div class="card-body">
-              <h6 class="card-title">Master of Pharmacy (M.Pharm)</h6>
-              <!-- <ol type="1" class="card-text">
-                <li>Pharmaceutical Quality Assurance</li>
-                <li>Pharmaceutics</li>
-                <li>Pharmacology</li>
-                <li>Pharmaceutical Chemistry</li>
-              </ol> -->
+              <h6 class="card-title">Pharm D</h6>
+              <!-- <p class="card-text">Some text inside the first box.</p> -->
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3 p-1">
+          <div class="card" style="background-color: #5d4f96;color: #ffffff;">
+            <div class="card-body">
+              <h6 class="card-title">M. Pharm Quality Assurance</h6>
+              <!-- <p class="card-text">Some text inside the first box.</p> -->
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3 p-1">
+          <div class="card" style="background-color: #ee74aa;color: #ffffff;">
+            <div class="card-body">
+              <h6 class="card-title">M. Pharm Pharmaceutics</h6>
+              <!-- <p class="card-text">Some text inside the first box.</p> -->
             </div>
           </div>
         </div>
       </div>
       <div class="row mt-2">
-        <div class="col-md-6 p-1">
+        <div class="col-md-3 p-1">
           <div class="card" style="background-color: #ee74aa;color: #ffffff;">
             <div class="card-body">
-              <h6 class="card-title">Doctor of Pharmacy (Pharm D)
-              </h6>
+              <h6 class="card-title">Pharmd D. Post Baccalaureate</h6>
               <!-- <p class="card-text">Some text inside the third box.</p> -->
             </div>
           </div>
         </div>
-        <div class="col-md-6 p-1">
+        <div class="col-md-3 p-1">
           <div class="card" style="background-color: #5d4f96;color: #ffffff;">
             <div class="card-body">
-              <h6 class="card-title">Doctor of Pharmacy (Pharm D) - Post
-                Baccalaureate</h6>
-              <!-- <p class="card-text">Some text inside the fourth box.</p> -->
+              <h6 class="card-title">Ph. D.</h6>
+              <!-- <p class="card-text">Some text inside the third box.</p> -->
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3 p-1">
+          <div class="card" style="background-color: #ee74aa;color: #ffffff;">
+            <div class="card-body">
+              <h6 class="card-title">M. Pharm Pharmacology</h6>
+              <!-- <p class="card-text">Some text inside the third box.</p> -->
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3 p-1">
+          <div class="card" style="background-color: #5d4f96;color: #ffffff;">
+            <div class="card-body">
+              <h6 class="card-title">M. Pharm Pharmaceutics Chemistry</h6>
+              <!-- <p class="card-text">Some text inside the third box.</p> -->
             </div>
           </div>
         </div>
