--- a/staff.html
+++ b/staff.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Maliba Pharmacy College</title>
+  <title>MPC || Staff</title>
   <!-- Required meta tags -->
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -11,6 +11,8 @@
   <meta name="Description" content="Maliba Pharmacy College, UTU University" />
   <meta name="Keywords" content="Maliba Pharmacy College, UTU University" />
   <link rel="Shortcut Icon" href="./images/Logo/maliba.ico" />
+  <link rel="stylesheet" href="./css/footer.css">
+
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 
   <link href="./css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous" />
@@ -21,7 +23,10 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
     integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
     crossorigin="anonymous"></script>
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
 </head>
+
 
 <body>
   <nav class="navbar navbar-expand-sm bg-light navbar-light fixed-top">
@@ -77,9 +82,267 @@
       </div>
     </div>
   </nav>
-  <div class="container-fluid">
-
+  <!-- Page Content -->
+  <div class="container-fluid mt-4 mb-4 pt-5">
+    <div class="row">
+      <!-- Team Member 1 -->
+      <div class="col-xl-3 col-md-6 mb-4">
+        <div class="card border-0 shadow">
+          <img src="https://source.unsplash.com/TMgQMXoglsM/500x350" class="card-img-top" alt="...">
+          <div class="card-body text-center">
+            <h5 class="card-title mb-0 service">DR. JITENDRA NASRIWALA</h5>
+            <p class="service_desc">
+              <span class="fa fa-tags"></span>&nbsp;In-Charge Director, Associate Professor<br>
+              <span class="fa fa-envelope"></span>&nbsp;jvnasriwala@utu.ac.in<br>
+              <span class="fa fa-paperclip"></span>&nbsp;Image Processing
+            </p>
+          </div>
+        </div>
+      </div>
+      <!-- Team Member 2 -->
+      <div class="col-xl-3 col-md-6 mb-4">
+        <div class="card border-0 shadow">
+          <img src="https://source.unsplash.com/TMgQMXoglsM/500x350" class="card-img-top" alt="...">
+          <div class="card-body text-center">
+            <h5 class="card-title mb-0 service">Team Member</h5>
+            <p class="service_desc">
+              <span class="fa fa-tags"></span>&nbsp;<br>
+              <span class="fa fa-envelope"></span>&nbsp;<br>
+              <span class="fa fa-paperclip"></span>&nbsp;
+            </p>
+          </div>
+        </div>
+      </div>
+      <!-- Team Member 3 -->
+      <div class="col-xl-3 col-md-6 mb-4">
+        <div class="card border-0 shadow">
+          <img src="https://source.unsplash.com/sNut2MqSmds/500x350" class="card-img-top" alt="...">
+          <div class="card-body text-center">
+            <h5 class="card-title mb-0 service">Team Member</h5>
+            <p class="service_desc">
+              <span class="fa fa-tags"></span>&nbsp;<br>
+              <span class="fa fa-envelope"></span>&nbsp;<br>
+              <span class="fa fa-paperclip"></span>&nbsp;
+            </p>
+          </div>
+        </div>
+      </div>
+      <!-- Team Member 4 -->
+      <div class="col-xl-3 col-md-6 mb-4">
+        <div class="card border-0 shadow">
+          <img src="https://source.unsplash.com/7u5mwbu7qLg/500x350" class="card-img-top" alt="...">
+          <div class="card-body text-center">
+            <h5 class="card-title mb-0 service">Team Member</h5>
+            <p class="service_desc">
+              <span class="fa fa-tags"></span>&nbsp;<br>
+              <span class="fa fa-envelope"></span>&nbsp;<br>
+              <span class="fa fa-paperclip"></span>&nbsp;
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- /.row -->
+    <div class="row">
+      <!-- Team Member 1 -->
+      <div class="col-xl-3 col-md-6 mb-4">
+        <div class="card border-0 shadow">
+          <img src="https://source.unsplash.com/TMgQMXoglsM/500x350" class="card-img-top" alt="...">
+          <div class="card-body text-center">
+            <h5 class="card-title mb-0 service">Team Member</h5>
+            <p class="service_desc">
+              <span class="fa fa-tags"></span>&nbsp;<br>
+              <span class="fa fa-envelope"></span>&nbsp;<br>
+              <span class="fa fa-paperclip"></span>&nbsp;
+            </p>
+          </div>
+        </div>
+      </div>
+      <!-- Team Member 2 -->
+      <div class="col-xl-3 col-md-6 mb-4">
+        <div class="card border-0 shadow">
+          <img src="https://source.unsplash.com/9UVmlIb0wJU/500x350" class="card-img-top" alt="...">
+          <div class="card-body text-center">
+            <h5 class="card-title mb-0 service">Team Member</h5>
+            <p class="service_desc">
+              <span class="fa fa-tags"></span>&nbsp;<br>
+              <span class="fa fa-envelope"></span>&nbsp;<br>
+              <span class="fa fa-paperclip"></span>&nbsp;
+            </p>
+          </div>
+        </div>
+      </div>
+      <!-- Team Member 3 -->
+      <div class="col-xl-3 col-md-6 mb-4">
+        <div class="card border-0 shadow">
+          <img src="https://source.unsplash.com/sNut2MqSmds/500x350" class="card-img-top" alt="...">
+          <div class="card-body text-center">
+            <h5 class="card-title mb-0 service">Team Member</h5>
+            <p class="service_desc">
+              <span class="fa fa-tags"></span>&nbsp;<br>
+              <span class="fa fa-envelope"></span>&nbsp;<br>
+              <span class="fa fa-paperclip"></span>&nbsp;
+            </p>
+          </div>
+        </div>
+      </div>
+      <!-- Team Member 4 -->
+      <div class="col-xl-3 col-md-6 mb-4">
+        <div class="card border-0 shadow">
+          <img src="https://source.unsplash.com/7u5mwbu7qLg/500x350" class="card-img-top" alt="...">
+          <div class="card-body text-center">
+            <h5 class="card-title mb-0 service">Team Member</h5>
+            <p class="service_desc">
+              <span class="fa fa-tags"></span>&nbsp;<br>
+              <span class="fa fa-envelope"></span>&nbsp;<br>
+              <span class="fa fa-paperclip"></span>&nbsp;
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- /.row -->
+    <div class="row">
+      <!-- Team Member 1 -->
+      <div class="col-xl-3 col-md-6 mb-4">
+        <div class="card border-0 shadow">
+          <img src="https://source.unsplash.com/TMgQMXoglsM/500x350" class="card-img-top" alt="...">
+          <div class="card-body text-center">
+            <h5 class="card-title mb-0 service">Team Member</h5>
+            <p class="service_desc">
+              <span class="fa fa-tags"></span>&nbsp;<br>
+              <span class="fa fa-envelope"></span>&nbsp;<br>
+              <span class="fa fa-paperclip"></span>&nbsp;
+            </p>
+          </div>
+        </div>
+      </div>
+      <!-- Team Member 2 -->
+      <div class="col-xl-3 col-md-6 mb-4">
+        <div class="card border-0 shadow">
+          <img src="https://source.unsplash.com/9UVmlIb0wJU/500x350" class="card-img-top" alt="...">
+          <div class="card-body text-center">
+            <h5 class="card-title mb-0 service">Team Member</h5>
+            <p class="service_desc">
+              <span class="fa fa-tags"></span>&nbsp;<br>
+              <span class="fa fa-envelope"></span>&nbsp;<br>
+              <span class="fa fa-paperclip"></span>&nbsp;
+            </p>
+          </div>
+        </div>
+      </div>
+      <!-- Team Member 3 -->
+      <div class="col-xl-3 col-md-6 mb-4">
+        <div class="card border-0 shadow">
+          <img src="https://source.unsplash.com/sNut2MqSmds/500x350" class="card-img-top" alt="...">
+          <div class="card-body text-center">
+            <h5 class="card-title mb-0 service">Team Member</h5>
+            <p class="service_desc">
+              <span class="fa fa-tags"></span>&nbsp;<br>
+              <span class="fa fa-envelope"></span>&nbsp;<br>
+              <span class="fa fa-paperclip"></span>&nbsp;
+            </p>
+          </div>
+        </div>
+      </div>
+      <!-- Team Member 4 -->
+      <div class="col-xl-3 col-md-6 mb-4">
+        <div class="card border-0 shadow">
+          <img src="https://source.unsplash.com/7u5mwbu7qLg/500x350" class="card-img-top" alt="...">
+          <div class="card-body text-center">
+            <h5 class="card-title mb-0 service">Team Member</h5>
+            <p class="service_desc">
+              <span class="fa fa-tags"></span>&nbsp;<br>
+              <span class="fa fa-envelope"></span>&nbsp;<br>
+              <span class="fa fa-paperclip"></span>&nbsp;
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- /.row -->
   </div>
+  <!-- /.container -->
 </body>
+<footer>
+  <div class="content">
+    <div class="top">
+      <div class="logo-details">
+        <!-- <i class="fab fa-slack"></i> -->
+        <!-- <img src="./images/Logo/MPC_logo.jpg" alt="maliba pharmacy collage logo"> -->
+        <span class="logo_name">
+          Maliba Pharmacy Collage</span>
+      </div>
+      <div class="media-icons">
+        <a href="#"><i class="fab fa-facebook-f"></i></a>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+        <a href="#"><i class="fab fa-youtube"></i></a>
+      </div>
+    </div>
+    <div class="link-boxes">
+      <ul class="box">
+        <li class="link_name">Committees</li>
+
+        <li><a href="#">Committees</a></li>
+        <li><a href="#">Anti-ragging Committee</a></li>
+        <li><a href="#">Gender Sensitization Committee 2022-23</a></li>
+        <li><a href="#">Grievance Redressal Committee 2022-23</a></li>
+        <li><a href="#">IC Committee 2022-23</a></li>
+      </ul>
+      <ul class="box">
+        <li class="link_name">Students</li>
+        <li><a href="#">SIS</a></li>
+        <li><a href="#">Student Expression</a></li>
+        <li><a href="#">Placement</a></li>
+        <li><a href="#">Scholarship</a></li>
+        <li><a href="#">Academic Year Calender</a></li>
+      </ul>
+      <ul class="box">
+        <li class="link_name">Activity</li>
+        <li><a href="#">Herbs</a></li>
+        <li><a href="#">Photo Gallery</a></li>
+        <li><a href="#">Photoshop</a></li>
+        <li><a href="#">Free Vaccination Camp</a></li>
+        <li><a href="#">SIF</a></li>
+        <li><a href="#">Library Details</a></li>
+
+      </ul>
+      <ul class="box">
+        <li class="link_name">Quick Link</li>
+        <li><a href="#">Parents Feedback</a></li>
+        <li><a href="#">Virtual Tour</a></li>
+        <li><a href="#">PCI Registration</a></li>
+        <li><a href="#">Anti-discrimination Cell 2022-23</a></li>
+        <li><a href="#">Nirf Reports</a></li>
+        <li><a href="#">AICTE - EOA 1999 TO 22-23</a></li>
+      </ul>
+      <ul class="box">
+        <li class="link_name">Reading Corner </li>
+        <li><a href="#">Brochure</a></li>
+        <li><a href="#">B.Pharm FAQ</a></li>
+        <li><a href="#">M.Pharm FAQ</a></li>
+        <li><a href="#">Pharm D. FAQ</a></li>
+      </ul>
+      <!-- <ul class="box input-box">
+      <li class="link_name">Subscribe</li>
+      <li><input type="text" placeholder="Enter your email"></li>
+      <li><input type="button" value="Subscribe"></li>
+    </ul> -->
+    </div>
+  </div>
+  <div class="bottom-details">
+    <div class="bottom_text">
+      <span class="copyright_text" style="text-align: center;">Powered by UTU
+        <!-- <a href="#">CodingLab.</a>All rights reserved -->
+      </span>
+      <!-- <span class="policy_terms">
+      <a href="#">Privacy policy</a>
+      <a href="#">Terms & condition</a>
+    </span> -->
+    </div>
+  </div>
+</footer>
 
 </html>
