update keyword in meta tag

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="Distribution" content="Global" />
   <meta name="Author" content="maliba.edu.in" />
   <meta name="Description" content="Maliba Pharmacy College, UTU University" />
-  <meta name="Keywords" content="Maliba Pharmacy College, UTU University" />
+  <meta name="Keywords" content="Maliba Pharmacy College, UTU University, MPC" />
   <link rel="Shortcut Icon" href="./images/Logo/maliba.ico" />
   <link rel="stylesheet" href="./css/footer.css">
 
